fix z-index of toolbar pickers

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* Dokuwiki */
+
+.picker {
+    z-index: 99;
+}
+
 /* Editor */
 
 .ace-doku.ace_editor {
